<package>
  <name>LocalNav</name>
  <version>0.0.1</version>
  <description>
    Tmp desc.
  </description>
  <maintainer email="npaul@ltu.edu">ACTor Team</maintainer>
  <license>MIT</license>

  <!-- <url>http://ros.org/wiki/foo_core</url> -->
  <author>ACTor Team</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
