<package>
  <name>LocalNav</name>
  <version>0.0.1</version>
  <description>
    Tmp desc.
  </description>
  <maintainer email="npaul@ltu.edu">ACTor Team</maintainer>
  <license>MIT</license>

  <!-- <url>http://ros.org/wiki/foo_core</url> -->
  <author>ACTor Team</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>grid_map_ros</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>perception_pcl</build_depend>
  <build_depend>grid_map_pcl</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>grid_map_ros</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>perception_pcl</run_depend>
  <run_depend>grid_map_pcl</run_depend>
</package>
